[workspace]
members = ["crates/*", "tests"]

[package]
edition = "2021"
name = "pico-rs-sensor-hub"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[package.metadata.cargo-machete]
ignored = ["portable-atomic"]

[dependencies]
am2320 = "0.2.0"
cortex-m-rt = "0.7"
defmt = "1"
defmt-rtt = "1"
display-interface = "0.5.0"
embedded-alloc = "0.6.0"
embedded-graphics = { workspace = true }
embedded-graphics-framebuf = "0.5.0"
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = "0.1.2"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.8.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040", "rt"] }
panic-probe = { version = "1", features = ["print-defmt"] }
portable-atomic = { version = "1.11.1", features = ["critical-section"] }
rand = { workspace = true }
ssd1306 = { version = "0.10.0", features = ["async"] }
static_cell = "2.1.1"
u8g2-fonts = { workspace = true }

game-logic = { path = "./crates/game-logic" }
pico-display = { path = "./crates/pico-display" }

[workspace.dependencies]
embedded-graphics = "0.8.1"
rand = { version = "0.9.2", features = ["small_rng"], default-features = false }
trait-set = "0.3.0"
u8g2-fonts = "0.7.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
