[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
rstest = "0.26.1"
tracing = "0.1.41"
test-log = { version = "0.2", features = ["trace"] }
embedded-graphics = "0.7.0"
embedded-graphics-simulator = "0.3.0"
pico-display = { path = "../crates/pico-display" }

[[test]]
name = "test-dice"
path = "test_dice.rs"

