[package]
edition = "2021"
name = "pico-display"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics = "0.7.0"
num-traits = { version = "0.2.19", default-features = false }
rand = { version = "0.8.3", features = ["small_rng"], default-features = false }
trait-set = "0.3.0"
